--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,8 @@ out/
 *.ps
 *.eps
 *.pdf
+# explicitly allow from images folder
+!images/*.pdf
 
 ## Generated if empty string is given at "Please type another file name for output:"
 .pdf
